  - Keybinding =M-s M-s= for ~M-x isearch-forward-thing-at-point~.
  - More abbrevs to ~init-abbrevs.el~
  - Keybinding =f= to open =xref= definition in the same window.
  - Enable =recentf-mode=. Call with ~M-x recent-open*~.
  - Keybinding =C-c t= to start terminal emulator.
  - Keybinding =C-c b w= to toggle =whitespace-mode=.
  - Keybinding =C-c l a= to call ~M-x eglot-code-actions~.

*** Changed:
  - Improve =rust-mode= usability.
  - Improve =php-mode= usability.
  - Improve editing and search usability.
  - Configure =xref= to use =ripgrep= when it's available.
  - Better =term-mode= usability.
  - Replace =global-goto-address-mode= by local enabling.
  - Swap =org-mode= default keybindings =RET= and =C-j=.
  - Improve =diff-mode= usability.

*** Removed:
  - Fallback =tab-always-indent= to its default value of =t=.
  - Disable =org-mode= bindings =M-<left>=, =M-<right>=, =M-<up>=, =M-<down>=.
  - Keybinding =C-c e d= in favor of more concise =C-c d=.


** v2.0.0 - 2022-04-07

Improved usability of everyday tasks in writing and programming, especially in
regard to:
- emails and mailing lists.
- programming: ELisp, PHP, CSS, HTML, Rust.
- text writing and reading.
- Emacs UI and lifecycle.

*** Added:
  - Additional =PDF= tools.
  - Configure several =PHP= abbreviations (templates).
  - /Language Server Protocol/ (LSP) client =eglot=.
  - Enable =company-mode= completions.
  - =ELisp= configuration file.
  - Auto-mode for =XML= and =YAML=.
  - =diff-hl= package to mark changed hunks (under =git=) on the fringe.
  - ~examples/local-pre-init.el~ file.
  - Open configured files on Emacs load without =desktop-save-mode= state.
  - Command to exit =Emacs= and reset =desktop-save-mode= state.
  - Confirm before killing non-empty =*scratch*= buffer.
  - Keybinding to toggle =scroll-lock-mode=.
  - Auto-insert closing /parenthesis/.
  - Configure =Gnus= as a mailing lists reader.
  - Enable =GNU-devel ELPA= packages repository.